# AdvenCore

./: CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
include/advenCore/: Backgrounds.hpp  BitField.hpp  Display.hpp  HwUtils.hpp  Input.hpp  LinkMultiplayer.hpp  LinkNormal.hpp  Object.hpp  Property.hpp  SRAM.hpp  ScreenEntry.hpp  SystemCall.hpp  Timers.hpp  Types.hpp  VBAPrint.hpp  Vector.hpp
include/advenCore/macros/: Property.hpp
source/: Backgrounds.cpp  Display.cpp  Input.cpp  LinkMultiplayer.cpp  LinkNormal.cpp  Object.cpp  SRAM.cpp  ScreenEntry.cpp  SystemCall.s  Timers.cpp  VBAPrint.s  Vector.cpp
